[package]
name = "rag-ai-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async-openai = "0.26.0"
dotenv = "0.15.0"
qdrant-client = "1.12.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
